Move one TrayAccessibilityTest to ash_unittests

TrayAccessibilityTest.CheckMenuVisibilityOnDetailMenu was disabled for
flake. The most likely cause is test-only race conditions in sending
session state from the browser to ash.

It does not need to be a browser test. Move it to ash_unittests to
avoid the race conditions and re-enable it.

Bug: 819987
Test: ash_unittests
Change-Id: Iecf37fbb9d0115c5d1f9299e729fb66d193f7048
Reviewed-on: https://chromium-review.googlesource.com/957308
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542223}
Former-commit-id: 78a058bc8c5ae34722e689a269682ff4806a42fa