ash/system/tray_accessibility.h
@@ -30,6 +30,7 @@ class View;
 namespace ash {
 class HoverHighlightView;
 class SystemTrayItem;
+class TrayAccessibilityTest;
 
 namespace tray {
 
@@ -42,6 +43,7 @@ class AccessibilityDetailedView : public TrayDetailsView {
   void OnAccessibilityStatusChanged();
 
  private:
+  friend class ::ash::TrayAccessibilityTest;
   friend class chromeos::TrayAccessibilityTest;
 
   // TrayDetailsView:
@@ -105,6 +107,7 @@ class TrayAccessibility : public TrayImageItem, public AccessibilityObserver {
   ~TrayAccessibility() override;
 
  private:
+  friend class TrayAccessibilityTest;
   friend class chromeos::TrayAccessibilityTest;
 
   void SetTrayIconVisible(bool visible);
